@@ -6,7 +6,7 @@ At the end of the analysis phase http://www.asciidoctor[Asciidoctor] is used for
 Furthermore, _++include::[]++_ directives are provided for embedding a summary about executed and imported rules.
 
 By default, all rule files with the name `index.adoc` will be selected for rendering.
-The report property `asciidoc.report.file.include` may be used to explicitly select files.
+The report properties `asciidoc.report.file.include` and `asciidoc.report.file.exclude` may be used to explicitly select files.
 Files may be located in the rule directory of a project (e.g. `jqassistant/`) or provided by plugins.
 
 === jQA Include Directives
