@@ -13,7 +13,6 @@ import com.buschmais.jqassistant.core.report.api.ReportPlugin.Default;
 import com.buschmais.jqassistant.core.report.api.model.Result;
 import com.buschmais.jqassistant.core.rule.api.model.*;
 import com.buschmais.jqassistant.core.rule.api.source.RuleSource;
-import com.buschmais.jqassistant.core.shared.annotation.ToBeRemovedInVersion;
 import com.buschmais.jqassistant.core.shared.asciidoc.AsciidoctorFactory;
 import com.buschmais.jqassistant.core.shared.asciidoc.DocumentParser;
 
@@ -32,8 +31,6 @@ public class AsciidocReportPlugin implements ReportPlugin {
     private static final Logger LOGGER = LoggerFactory.getLogger(AsciidocReportPlugin.class);
 
     private static final String PROPERTY_DIRECTORY = "asciidoc.report.directory";
-    @ToBeRemovedInVersion(major = 1, minor = 12)
-    private static final String PROPERTY_RULE_DIRECTORY = "asciidoc.report.rule.directory";
     private static final String PROPERTY_FILE_INCLUDE = "asciidoc.report.file.include";
     private static final String PROPERTY_FILE_EXCLUDE = "asciidoc.report.file.exclude";
 
@@ -63,10 +60,9 @@ public class AsciidocReportPlugin implements ReportPlugin {
         if (this.reportDirectory.mkdirs()) {
             LOGGER.info("Created directory '" + this.reportDirectory.getAbsolutePath() + "'.");
         }
-        File ruleDirectory = getFile(PROPERTY_RULE_DIRECTORY, null, properties);
         String fileInclude = (String) properties.get(PROPERTY_FILE_INCLUDE);
         String fileExclude = (String) properties.get(PROPERTY_FILE_EXCLUDE);
-        this.ruleSourceMatcher = new RuleSourceMatcher(ruleDirectory, fileInclude, fileExclude);
+        this.ruleSourceMatcher = new RuleSourceMatcher(fileInclude, fileExclude);
     }
 
     private File getFile(String property, File defaultValue, Map<String, Object> properties) {
