@@ -5,7 +5,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
-import com.buschmais.jqassistant.core.report.api.ReportException;
 import com.buschmais.jqassistant.core.rule.api.model.RuleException;
 import com.buschmais.jqassistant.core.rule.api.source.FileRuleSource;
 import com.buschmais.jqassistant.core.rule.api.source.RuleSource;
@@ -14,7 +13,6 @@ import com.buschmais.jqassistant.core.shared.io.ClasspathResource;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import static java.util.Collections.emptySet;
 import static org.assertj.core.api.Assertions.assertThat;
 
 class RuleSourceMatcherTest {
@@ -28,26 +26,11 @@ class RuleSourceMatcherTest {
     }
 
     /**
-     * Verifies that a given rule directory is scanned for adoc files.
-     */
-    @Test
-    void scanRuleDirectory() throws ReportException {
-        RuleSourceMatcher ruleSourceMatcher = new RuleSourceMatcher(ruleDirectory, "index.adoc", null);
-
-        List<RuleSource> filteredRuleSources = ruleSourceMatcher.match(emptySet());
-
-        assertThat(filteredRuleSources).hasSize(1);
-        RuleSource ruleSource = filteredRuleSources.get(0);
-        assertThat(ruleSource.getRelativePath()).isEqualTo("index.adoc");
-    }
-
-    /**
-     * Verifies that the provided set of {@link RuleSource}s is used to detect the
-     * "index.adoc" file.
+     * Verifies that the provided set of {@link RuleSource}s is used to detect the "index.adoc" file.
      */
     @Test
     void detectIndexFileFromRuleSources() throws RuleException {
-        RuleSourceMatcher ruleSourceMatcher = new RuleSourceMatcher(null, null, null);
+        RuleSourceMatcher ruleSourceMatcher = new RuleSourceMatcher(null, null);
         Set<RuleSource> ruleSources = new HashSet<>();
         ruleSources.add(new FileRuleSource(ruleDirectory, "index.adoc"));
         ruleSources.add(new FileRuleSource(ruleDirectory, "additional-rules/importedRules.adoc"));
